# punya

./: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  sst.config.ts  svelte.config.js  svelte.config.ts  tailwind.config.ts  vite.config.ts  wrangler.json
api/: Dockerfile  compose.yml  pyproject.toml
api/src/: broker.py  collector.py  commands.py  db.py  dependencies.py  lifespan.py  main.py  settings.py  tasks.py
client/: eslint.config.js  nixpacks.toml  package-lock.json  package.json  svelte.config.js  svelte.config.ts
client/src/: app.css  app.d.ts  app.html
client/src/lib/: utils.ts
client/src/lib/icons/powerplay/: acquisition.svelte  all.svelte  undermining.svelte
client/src/routes/: +layout.svelte  +page.svelte
client/src/routes/megaships/: +page.svelte
client/src/routes/search-rescue/: +page.svelte
collector/: ecosystem.json  nixpacks.toml  package-lock.json  package.json  pyproject.toml  tsconfig.json
collector/src/: app.ts  data.py  db.py  db.ts  eddn.d.ts  main.py
database/: drizzle.config.ts  package-lock.json  package.json  worker-configuration.d.ts  wrangler.json
database/migrations/: 0000_short_giant_man.sql  0000_steady_roland_deschain.sql
database/migrations/meta/: 0000_snapshot.json  _journal.json
database/src/: feed.ts  index.ts  schema.ts
src/: app.css  app.d.ts  app.html
src/lib/: utils.ts
src/lib/components/: app-sidebar.svelte  megaships.svelte  mining.svelte  settlements.svelte
src/lib/icons/powerplay/: reinforcement.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/combat/: +page.svelte
src/routes/market-flood/: +page.svelte
src/routes/megaships/: +page.svelte
src/routes/missions/: +page.svelte
