[project]
name = "punya-api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "datamodel-code-generator[http]>=0.35.0",
    "fastapi[standard]>=0.120.4",
    "geoalchemy2>=0.18.0",
    "geojson-pydantic>=2.1.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.11.0",
    "pyzmq>=27.1.0",
    "sqlmodel>=0.0.27",
    "taskiq>=0.11.20",
    "taskiq-fastapi>=0.3.5",
    "taskiq-redis>=1.1.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]

[project.scripts]
eddi-models = 'commands:sync_eddi_models'

[tool.ruff]
select = ["I", "FURB", "TRY"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
